# rubric-eval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  rubric_agent_report.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: index.html  showcase.html
examples/: basic_eval.py  eval.py  langchain_example.py  showcase_demo.py
examples/pytest_example/: test_my_llm.py
rubric-eval/: README.md  rubric_report.html  rubric_report.json
rubric-eval/examples/: agent_eval.py  basic_eval.py
rubric-eval/rubriceval/: __init__.py
rubric-eval/rubriceval/cli/: main.py
rubric-eval/rubriceval/metrics/: advanced_agent.py  agent.py  exact_match.py
rubric-eval/tests/: test_metrics.py
rubriceval/: __init__.py  capture.py
rubriceval/cli/: main.py
rubriceval/core/: evaluator.py  results.py  test_case.py
rubriceval/integrations/: loaders.py  pytest_plugin.py
rubriceval/metrics/: base.py  exact_match.py  hallucination.py  llm_judge.py  semantic.py
rubriceval/metrics/agent/: __init__.py
rubriceval/report/: reporter.py
tests/: test_metrics.py
